--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: Node.js CI
 
 on:
@@ -18,6 +17,15 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
     - name: configure aws credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -25,4 +33,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
     - name: Deploy static site to S3 bucket
-      run: aws s3 cp index.html  s3://git-hub-actions
+      run: aws s3 sync ./build s3://git-hub-actions
