--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      matrix:
+        node-version: latest
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
