--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
-    - run: npm build
+    - run: npm run build
     - name: configure aws credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -32,4 +32,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
     - name: Deploy static site to S3 bucket
-      run: aws s3 cp index.html  s3://git-hub-actions
+      run: aws s3 cp ./build  s3://git-hub-actions
